production-ai-stack/inference-service/litellm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: litellm
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: litellm
